p tag no longer covers lower half of button

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -156,6 +156,7 @@ main {
 }
 
 .organization-login {
+  display: inline-block;
   margin-top: 0.2rem;
   font-size: 1rem;
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.15);
